revert some commits

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 node_modules
-e2e/allure-results
-e2e/allure-report
-e2e/reports
-e2e/test-utils/test-rail/run-id
+report
 .idea
 .vscode
 .DS_Store
 package-lock.json
 ./package-lock.json
-e2e/performance/results
